Introduce /eligibility/check-zip-code route to validate user zip codes. Reorganize eligibility check function and tests
